изменение логики работы расширения

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <h1>GitLab Commit Manager</h1>
-  <label for="commitName">Название последнего коммита сборки:</label>
-  <input type="text" id="commitName" placeholder="Введите название коммита">
+  <label for="commitSHA">SHA последнего коммита сборки (8 сиволов):</label>
+  <input type="text" id="commitSHA" placeholder="Введите SHA коммита">
   <br>
   <label for="lineDate">Дата сборки:</label>
   <input type="date" id="lineDate">
