--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>GitLab Commit Manager</h1>
-  <label for="commitSHA">SHA последнего коммита сборки (8 сиволов):</label>
+  <label for="commitSHA">SHA последнего коммита сборки (8 символов):</label>
   <input type="text" id="commitSHA" placeholder="Введите SHA коммита">
   <br>
   <label for="lineDate">Дата сборки:</label>
